# phpreport

./: .dockerignore  .env.example  .env.test  .gitignore  AUTHORS  CONTRIBUTING.md  Dockerfile  INSTALL  Makefile  NEWS  README.md  TODO  book.toml  browserconfig.xml  composer.json  docker-compose-test.yml  docker-compose.yml  index.html  site.webmanifest  test.Dockerfile  test_db.Dockerfile  version.sh
api/: .flake8  README.md  alembic.ini  dependencies.py  main.py  pyproject.toml  tox.ini
api/auth/: auth_bearer.py  auth_handler.py
api/db/: base.py  db_connection.py
api/db/functions/: calculate_vacation_and_expected_hours.py  get_user_project_summaries.py  get_vacation_for_period.py  get_workday_count.py
api/db/triggers/: trg_update_yearly_expected_and_vacation.py
api/helpers/: time.py
api/migrations/: env.py
api/migrations/versions/: 0bee8c73c9a4_add_more_user_fields.py  217cb64b0391_initial_db_creation.py  2795e5409fb5_add_columns_to_config.py  2a20fa1bde50_add_calculated_field_to_task_table.py  2ac6108453f3_add_column_to_journey_history.py  3721dd962b84_increase_username_length.py  39723f474338_add_column_to_template_table.py  6a1ad39b566d_add_calculation_functions.py  72e6af46be22_add_scope_column_to_user_group_table.py  8c480b641f22_remove_customer_from_templates.py  b7cbb5c2b970_add_task_type.py  cd28ca502f89_add_function_for_project_summaries.py  (+4 more)
api/models/: archive.py  area.py  city.py  config.py  customer.py  project.py  sector.py  timelog.py  user.py
api/routers/: projects.py
api/schemas/: customer.py  project.py  timelog.py  user.py  validation.py
api/services/: config.py  main.py  projects.py  timelog.py  user.py
api/tests/: conftest.py
(+934 files in other folders)
