[tool.poetry]
name = "PhpReport API"
version = "0.1.0"
description = ""
authors = ["Ana Rute Mendes <ana@igalia.com>", "Danielle Mayabb <danielle@igalia.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "1.10.7"
psycopg2-binary = "2.9.6"
alembic = "1.10.4"
sqlalchemy = "2.0.12"

[tool.poetry.dev-dependencies]
mypy = "1.3.0"
black = "23.3.0"
isort = "5.12.0"
autoflake = "2.1.1"
flake8 = "6.0.0"
pytest = "7.3.1"
pytest-cov = "4.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
