[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PhpReportAPI"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Rute Mendes", email = "ana@igalia.com"},
    {name = "Danielle Mayabb", email = "danielle@igalia.com"}
]
readme = "README.md"

dependencies = [
    "PyJWT == 2.7.0",
    "python-decouple == 3.8",
    "pydantic == 1.10.7",
    "psycopg2-binary == 2.9.6",
    "alembic == 1.10.4",
    "sqlalchemy == 2.0.12",
    "fastapi >= 0.95.2",
    "tox==4.6.3",
    "uvicorn >= 0.22.0"
]

[project.optional-dependencies]
dev = [
    "mypy == 1.3.0",
    "black == 23.3.0",
    "isort == 5.12.0",
    "autoflake == 2.1.1",
    "flake8 == 6.0.0",
    "pytest == 7.3.1",
    "pytest-cov == 4.0.0"
]

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 120
extend-exclude = '''
(
  ^/migrations/*
  | .venv
  | .env
)
'''
